<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_wonder" android:orderInCategory="5" android:title="@string/action_wonder" android:icon="@android:drawable/ic_menu_search"></item><item android:id="@+id/action_favorite" android:title="@string/action_favorite" android:orderInCategory="10" android:icon="@android:drawable/ic_menu_view">
    </item>
     
    <item android:id="@+id/action_history" android:title="@string/action_history" android:orderInCategory="20" android:icon="@android:drawable/ic_menu_recent_history">
    </item>
    
    <item android:id="@+id/action_doaction" android:title="@string/action_doaction" android:orderInCategory="30" android:icon="@android:drawable/ic_menu_edit">
    </item>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="40"
        android:title="@string/action_settings" android:icon="@android:drawable/ic_menu_manage"/>
    
    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit" android:orderInCategory="50" android:icon="@android:drawable/ic_menu_close_clear_cancel">
    </item>
    
    
    
    
    

</menu>